--- a/index.html
+++ b/index.html
@@ -5,8 +5,55 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="orange-text">Tech TD</span> Website</h1>
+            <h3>World Class Web Developer</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi porro minus velit ullam impedit aperiam explicabo saepe delectus voluptate. Ipsa provident quia rem, expedita cum animi. Illo excepturi repellendus facere at corrupti dolorem veritatis, maxime alias id voluptatibus, soluta quos dolorum quibusdam distinctio, aliquam debitis eaque quas iure! Odio, illo.</p>
+            <a class="button" href="https://www.youtube.com/techtd"> Watch Now</a>
+        </div>
+        
+    <div class="half-width">
+        <img src="images/first-image.png" alt="">
+    </div>
+    </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/image 10.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>Dream Big Do Big</h2>
+            <h3>Become a web developer</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est eligendi possimus inventore aspernatur error voluptate nulla placeat culpa similique, dolore, blanditiis id! Ipsum laborum optio cum aut quae error eius minima et sunt vitae, fugit porro qui ea facere, molestias officiis officia dolorum numquam in modi illo. Suscipit, quasi deleniti dolore vel mollitia numquam perspiciatis nam facere, pariatur, dolorem sit nisi consequatur voluptatem ipsum autem omnis iste repellat velit tempora sapiente. Saepe expedita corrupti minima autem ad ullam cupiditate quaerat.</p>
+            <a class="button" href="https://www.youtube.com/techtd"> Watch Now</a>
+        </div>
+    </section>
+
+    <section class="experience">
+        <h1>Experiences</h1>
+        <div id="main" class="half-width ex-box">
+            <h2>Full Stack Web Developer</h2>
+            <h3>2022 - Present | Pro Level Web Developer</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia voluptates tempore deserunt ab laborum ut sapiente in ducimus sequi maxime. Perspiciatis excepturi sapiente id, eligendi omnis quaerat architecto iusto perferendis neque optio, reiciendis aliquam, adipisci ut minima placeat aut qui possimus! Blanditiis ipsum repudiandae totam, ullam expedita inventore qui doloremque?</p>
+
+        </div>
+        <div id=first class="half-width ex-box">
+            <h2>Full Stack Web Developer</h2>
+            <h3>2022 - Present | Pro Level Web Developer</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia voluptates tempore deserunt ab laborum ut sapiente in ducimus sequi maxime. Perspiciatis excepturi sapiente id, eligendi omnis quaerat architecto iusto perferendis neque optio, reiciendis aliquam, adipisci ut minima placeat aut qui possimus! Blanditiis ipsum repudiandae totam, ullam expedita inventore qui doloremque?</p>
+        </div>
+    </section>
+
+    <footer>
+        <p>© All right Reserved</p>
+    </footer>
     
 </body>
 </html>
